# trino-reviewer

./: .bandit  .dockerignore  .env  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
composes/: compose.yaml
composes/valkey/: compose.yaml
proto/: schema_review.proto
src/api/: application.py
src/api/grpc/: run_server.py  service.py
src/api/grpc/services/: schema_review.py
src/application/agents/: react_agent.py  schema_reviewer.py
src/application/clients/: trino_mcp_http_client.py
src/application/factories/: service_factory.py
src/application/handlers/: llm_message_handler.py
src/application/inputs/: performance.py  trino_mcp.py
src/application/models/: performance.py
src/application/services/: llm.py  prompt_service.py  review.py
src/application/tools/: data_lineage_tool.py  performance_analyzer.py  schema_diff_tool.py  trino_mcp_tool.py  trino_tool.py
src/application/workflows/: analyze_schema.py  trino_mcp_workflow.py
src/core/: config.py  constants.py  logging.py
src/core/abstractions/: agent.py  cache.py  chat_message.py  chat_model.py  llm.py  message_handler.py  review_service.py  workflow.py
src/core/factories/: service_factory.py
src/core/models/: base.py  validation.py
src/core/prompts/: base.py  manager.py  registry.py  system.py
src/core/prompts/templates/: system_reviewer.txt  trino_schema_analysis.txt
src/core/types/: agent.py
src/core/utils/: json.py
src/core/validation/: schema_validator.py
src/infra/: langfuse.py
src/infra/adapters/: langchain_adapter.py
src/infra/cache/: valkey_cache.py
src/infra/messages/: langchain.py
src/infrastructure/adapters/: langchain_adapter.py
src/infrastructure/cache/: valkey_cache.py
src/utils/: prompt_init.py
